# Engine

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  README.md  build.ts  build_config.json  debug.natvis  index.html  package-lock.json  package.json  preprocess.js  search.html  todo.txt
ThirdParty2/: CMakeLists.txt  download.js  zip_download.json
api/: CMakeLists.txt
api/Core/: asset_compiler.cpp  engine_full.cpp
api/EngineFull/: engine_full.cpp
api/assetcompiler_dll/: assetcompiler_dll.cpp
api/engine_dll/: engine_dll.cpp
api/nodejs_binding/: package.json  tsconfig.json
api/nodejs_binding/src/: asset_compiler.ts  buffer_lib.ts  buffer_lib_test.ts  engine.ts  engine_v2.ts  shared_lib_interface.ts
api/nodejs_binding/test/: asset_compiler_test.ts  buffer_lib_test.ts  engine_test.ts
api/v8_binding/: v8_binding.cpp
exe/: CMakeLists.txt
exe/AssetCompiler/: asset_compiler.cpp
exe/AssetCompilerExe/: asset_compiler_exe.cpp
servers/: CMakeLists.txt
servers/MaterialViewer/: material_viewer_server.cpp
servers/MaterialViewer/MaterialViewer/: material_viewer_client.hpp  material_viewer_domain.hpp  material_viewer_server.hpp
servers/MaterialViewer/MaterialViewer/Include/: client.hpp  server.hpp
servers/MaterialViewer/test/: material_viewer_server_test.cpp
src/: CMakeLists.txt
src/AssetCompiler/AssetCompiler/: asset_compiler.hpp  asset_compiler_pass.hpp  asset_metadata.hpp  asset_types_json.hpp  img_compiler.hpp  obj_compiler.hpp  shader_compiler.hpp  shader_compiler_tt.hpp
src/AssetCompiler/test/: asset_compiler_test.cpp
src/AssetDatabase/AssetDatabase/: assetdatabase.hpp
src/AssetDatabase/test/: asset_database_test.cpp
src/AssetResource/AssetResource/: asset_ressource.hpp  ressource_algorithm.hpp
src/AssetResource/AssetResource/Interface/: iresource.hpp
src/AssetResource/AssetResource/Render/: allocator.hpp  ressources.hpp
src/AssetResource/test/: asset_ressource_test.cpp
src/AssetRessource/AssetRessource/: asset_ressource.hpp  ressource_algorithm.hpp  ressource_util.hpp
src/AssetRessource/AssetRessource/Render/: allocator.hpp  ressources.hpp
src/AssetRessource/test/: asset_ressource_test.cpp
src/Collision/Collision/: collision_definition.hpp  collision_src.hpp
src/Collision/test/: collision2_test.cpp
src/Common2/Common2/: common2.h  common2.hpp  common2_external_implementation.hpp  common2_v2.hpp  system.hpp  systems.h
src/Common2/Common2/AppNativeEvent/: app_native_event.hpp
src/Common2/Common2/Clock/: clock.h  clock.hpp
src/Common2/Common2/Container/: hashmap.hpp  heap.hpp  pool.h  pool.hpp  string.hpp  tree.hpp  varying_slice.hpp  varying_vector.hpp  vector.h  vector.hpp  vector_slice.hpp
src/Common2/Common2/Database/: database.hpp
src/Common2/Common2/File/: file.hpp  shared_lib_loader.hpp
src/Common2/Common2/Functional/: assert.hpp  binary_operators.hpp  container_iteration.hpp  encode.hpp  equality.hpp  hash.h  hash.hpp  hashT.hpp  path.hpp  slice_algorithm.hpp  sort.h  sort.hpp  sortT.hpp  sort_tt.h  string_functions.hpp
src/Common2/Common2/Implementation/: implementation.cpp
src/Common2/Common2/Include/: platform_include.h  platform_include.hpp
src/Common2/Common2/Macros/: macros.h  macros.hpp
src/Common2/Common2/Memory/: limits.h  limits.hpp  memory.h  memory.hpp  slice.h  slice.hpp  sliceT.hpp  slice_gen.h  slice_tt.h  span.h  span.hpp  spanT.hpp  token.h  token.hpp  tokenT.hpp
src/Common2/Common2/Pattern/: command_buffer.hpp
src/Common2/Common2/Serialization/: binary.hpp  json.hpp  types.hpp
src/Common2/Common2/Socket/: socket.hpp  socket_v2.hpp  websocket.hpp
src/Common2/Common2/Thread/: barrier.hpp  mutex.hpp  thread.h  thread.hpp
src/Common2/Common2/Types/: types.hpp
src/Common2/Common2/Window/: window.hpp
src/Common2/test/: common2_test.cpp  common2_test_c.c
src/GPU/GPU/: command_buffer.hpp  gpu.hpp  gpu_external_implementation.hpp  graphics.hpp  graphics_binder.hpp  instance.hpp  material.hpp  memory.hpp  present.hpp
src/GPU/GPU/_external/: gpu_platform_interface.hpp
src/GPU/GPU/backends/: interface.hpp  (+2 more)
src/GPU/test/: gpu_test.cpp
src/GPU_Software/GPU_Software/: gpu_software.hpp
src/Math2/Math2/: definitions.hpp  geometry.hpp  kernel.hpp  math.hpp  serialization.hpp
src/Math2/test/: math2_test.cpp
src/Render/Render/: d3_renderer.hpp  imgui_renderer.hpp  render.hpp  render_target.hpp
src/Render/test/: render_test.cpp
src/Scene2/Scene2/: scene2.hpp  scene2_header.hpp  scene2_serialization.hpp
src/Scene2/test/: scene2_test.cpp
src/Scene2Middleware/Scene2Middleware/: communication_layer.hpp  scene2_middleware.hpp
src/Scene2Middleware/test/: scene2_middleware_test.cpp
src/Test/AssetDatabase/: asset_database_test_utils.hpp  asset_metadata_database_test_utils.hpp
src/Test/Renderdoc/: renderdoc_app.h
src/Test/ShaderCompile/: shader_compiler.hpp
src/Window/Window/: window.hpp
src/Window/test/: window_test.cpp
src/_Engine/Engine/: engine.hpp  engine_api.hpp  engine_api_v2.hpp  engine_execution_unit.hpp  engine_instances.hpp  engine_loop.hpp  engine_modularized.hpp  engine_src.hpp  engine_thread.hpp  iengine.hpp
src/_Sandbox/: sandbox.cpp
src/_Sandbox/Sandbox/: engine_runner.hpp  sandbox.hpp  utility.hpp
tools/: CMakeLists.txt
tools/AssetCompiler/: assetcompiler_standalone.cpp
tools/AssetCompiler/AssetCompiler/: asset_compiler_editor.hpp
tools/AssetCompiler/test/: assetcompiler_tool_test.cpp
tools/ImguiIntegration/: imgui_integration.cpp
tools/ImguiIntegration/ImguiIntegration/: imgui_integration.hpp
tools/MaterialViewer/: main.cpp  materialviewer_standalone.cpp
tools/MaterialViewer/MaterialViewer/: material_viewer_editor.hpp  material_viewer_editor_v2.hpp  material_viewer_window.hpp  qt_engine_runner_thread.hpp  qt_include.hpp  qt_utility.hpp
tools/MaterialViewer/test/: material_viewer_test.cpp
tools/QTCommon/QTCommon/: qt_common.hpp  qt_include.hpp  qt_utility.hpp
tools/QtInterface/: qt_interface.cpp  qt_interface.hpp
tools/material_viewer/: main.cpp  material_viewer_window.hpp  qt_include.hpp  qt_utility.hpp
(+162 files in other folders)
