
add_library(MaterialViewerServer INTERFACE)
target_include_directories(MaterialViewerServer INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/MaterialViewer)
target_link_libraries(MaterialViewerServer INTERFACE Engine)
target_link_libraries(MaterialViewerServer INTERFACE AssetCompiler)

add_executable(MaterialViewerServerExec ${CMAKE_CURRENT_SOURCE_DIR}/MaterialViewer/material_viewer_server.cpp)
target_link_libraries(MaterialViewerServerExec PUBLIC MaterialViewerServer)

add_executable(MaterialViewerServerTest ${CMAKE_CURRENT_SOURCE_DIR}/MaterialViewer/test/material_viewer_server_test.cpp)
target_link_libraries(MaterialViewerServerTest PUBLIC MaterialViewerServer)